--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,33 +13,33 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=322
-dock_hsplit_3=-332
+dock_hsplit_3=-390
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scenes/", "res://Assets/", "res://Assets/Themes/", "res://Assets/Images/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn")
-center_split_offset=-415
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/menu.tscn")
+center_split_offset=-454
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-current_scene="res://main.tscn"
+selected_main_editor_idx=0
+current_scene="res://Scenes/main.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Main.gd"]
-selected_script="res://Main.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
-script_split_offset=70
+script_split_offset=214
 list_split_offset=0
 
 [ShaderEditor]
