--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,13 +1,59 @@
-[res://Main.gd]
+[res://Scripts/oldmain.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([4, 13, 16, 20, 30, 35, 44, 61, 117, 165]),
+"column": 23,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 187,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/main.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 25,
+"folded_lines": Array[int]([27, 36, 40, 44]),
+"h_scroll_position": 0,
+"row": 50,
 "scroll_position": 16.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 41,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 19,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/globals.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 12,
+"selection_to_column": 23,
+"selection_to_line": 22,
 "syntax_highlighter": "GDScript"
 }
