Label Handling Loop

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -16,12 +16,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 25,
-"folded_lines": Array[int]([27, 36, 40, 44]),
+"breakpoints": PackedInt32Array(44),
+"column": 12,
+"folded_lines": Array[int]([51, 55, 59, 70, 74]),
 "h_scroll_position": 0,
-"row": 50,
-"scroll_position": 16.0,
+"row": 44,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
