--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=322
-dock_hsplit_3=-390
+dock_hsplit_3=-384
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -30,15 +30,15 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/menu.tscn")
 center_split_offset=-454
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=3
 current_scene="res://Scenes/main.tscn"
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
-open_help=[]
+open_scripts=["res://Scripts/main.gd"]
+selected_script="res://Scripts/main.gd"
+open_help=["Dictionary"]
 script_split_offset=214
 list_split_offset=0
 
