--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Source/Portal/main_portal.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Portal/", "res://Source/Menus/", "res://Source/Menus/MainMenu/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/Menus/MainMenu/", "res://Source/Content/Test/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,13 +31,14 @@ open_scenes=PackedStringArray("res://Source/Menus/MainMenu/main_menu.tscn", "res
 current_scene="res://Source/Portal/main_portal.tscn"
 center_split_offset=-368
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Source/Menus/MainMenu/main_menu.gd", "res://Source/Portal/main_portal.gd"]
 selected_script="res://Source/Portal/main_portal.gd"
-open_help=["Dictionary"]
+open_help=[]
 script_split_offset=214
 list_split_offset=0
 
