--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,7 +1,19 @@
 list=Array[Dictionary]([{
 "base": &"Control",
+"class": &"MainMenu",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Source/Menus/MainMenu/main_menu.gd"
+}, {
+"base": &"Control",
 "class": &"MainPortal",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Source/Portal/main_portal.gd"
+"path": "res://Source/MainPortal/main_portal.gd"
+}, {
+"base": &"Control",
+"class": &"OptionMenu",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Source/Menus/Options/option_menu.gd"
 }])
