Singleton test added

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Source/Menus/Options/option_menu.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Source/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Menus/", "res://Source/Menus/Options/", "res://Source/Menus/MainMenu/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Source/Menus/MainMenu/main_menu.gd", "res://Source/OLD/main_portal.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd"]
+open_scripts=["res://Source/Menus/MainMenu/main_menu.gd", "res://Source/OLD/main_portal.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd", "res://Source/poop.gd"]
 selected_script="res://Source/Menus/Options/option_menu.gd"
 open_help=[]
 script_split_offset=214
