--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,26 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Source/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Menus/", "res://Source/Menus/Options/", "res://Source/Menus/MainMenu/")
+dock_filesystem_selected_paths=PackedStringArray("res://Source/Menus/Options/option_menu.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Singletons/", "res://Source/Menus/", "res://Source/Menus/Options/", "res://Source/Menus/MainMenu/", "res://Source/MainPortal/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Source/MainPortal/main_portal.tscn", "res://Source/Menus/MainMenu/main_menu.tscn", "res://Source/Menus/Options/option_menu.tscn")
+open_scenes=PackedStringArray("res://Source/MainPortal/main_portal.tscn", "res://Source/Menus/Options/option_menu.tscn", "res://Source/Menus/MainMenu/main_menu.tscn")
 current_scene="res://Source/Menus/Options/option_menu.tscn"
-center_split_offset=-608
+center_split_offset=-424
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Source/Menus/MainMenu/main_menu.gd", "res://Source/OLD/main_portal.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd", "res://Source/poop.gd"]
+open_scripts=["res://Source/Menus/MainMenu/main_menu.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd", "res://Source/Singletons/signals.gd"]
 selected_script="res://Source/Menus/Options/option_menu.gd"
-open_help=[]
+open_help=["Node"]
 script_split_offset=214
 list_split_offset=0
 
