--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Object",
+"class": &"Dice",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Source/Utilities/dice.gd"
+}, {
 "base": &"Control",
 "class": &"MainMenu",
 "icon": "",
