--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,26 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Source/Menus/Options/option_menu.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Singletons/", "res://Source/Menus/", "res://Source/Menus/Options/", "res://Source/Menus/MainMenu/", "res://Source/MainPortal/")
+dock_filesystem_selected_paths=PackedStringArray("res://Source/MainPortal/main_portal.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Utilities/", "res://Source/Singletons/", "res://Source/Menus/Options/", "res://Source/Menus/MainMenu/", "res://Source/MainPortal/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Source/MainPortal/main_portal.tscn", "res://Source/Menus/Options/option_menu.tscn", "res://Source/Menus/MainMenu/main_menu.tscn")
-current_scene="res://Source/Menus/Options/option_menu.tscn"
-center_split_offset=-424
+open_scenes=PackedStringArray("res://Source/MainPortal/main_portal.tscn")
+current_scene="res://Source/MainPortal/main_portal.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Source/Menus/MainMenu/main_menu.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd", "res://Source/Singletons/signals.gd"]
-selected_script="res://Source/Menus/Options/option_menu.gd"
-open_help=["Node"]
+open_scripts=["res://Source/Utilities/dice.gd", "res://Source/Menus/MainMenu/main_menu.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd"]
+selected_script="res://Source/MainPortal/main_portal.gd"
+open_help=[]
 script_split_offset=214
 list_split_offset=0
 
