--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
-"folded_lines": Array[int]([]),
+"column": 36,
+"folded_lines": Array[int]([8, 12, 18]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 18,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
+"column": 57,
+"folded_lines": Array[int]([19, 25, 32, 44, 51]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 17.0,
+"row": 51,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,10 +31,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
+"column": 28,
+"folded_lines": Array[int]([4]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -59,10 +59,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
+"column": 26,
+"folded_lines": Array[int]([6, 10, 14]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
