--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Node",
+"class": &"DebugScript",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Source/MainPortal/debug_script.gd"
+}, {
 "base": &"Object",
 "class": &"Dice",
 "icon": "",
