--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,14 +30,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Source/MainPortal/main_portal.tscn")
 current_scene="res://Source/MainPortal/main_portal.tscn"
 center_split_offset=-252
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Source/MainPortal/debug_script.gd", "res://Source/Utilities/dice.gd", "res://Source/Menus/MainMenu/main_menu.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd", "res://Source/Singletons/signals.gd", "res://Source/Singletons/callable_functions.gd"]
-selected_script="res://Source/Singletons/signals.gd"
+open_scripts=["res://Source/Utilities/dice.gd", "res://Source/Menus/MainMenu/main_menu.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd", "res://Source/Singletons/signals.gd", "res://Source/Singletons/callable_functions.gd", "res://Source/MainPortal/debug_script.gd"]
+selected_script="res://Source/Utilities/dice.gd"
 open_help=[]
 script_split_offset=214
 list_split_offset=0
