--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -59,10 +59,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 28,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -73,10 +73,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
-"folded_lines": Array[int]([11, 18, 31]),
+"column": 27,
+"folded_lines": Array[int]([11, 18]),
 "h_scroll_position": 0,
-"row": 31,
+"row": 18,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -87,10 +87,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 61,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
