--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Source/Singletons/signals.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Utilities/", "res://Source/Singletons/", "res://Source/Menus/", "res://Source/Menus/Options/", "res://Source/Menus/MainMenu/", "res://Source/MainPortal/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Singletons/", "res://Source/Menus/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Source/Singletons/callable_functions.gd", "res://Source/MainPortal/debug_script.gd", "res://Source/Utilities/dice.gd", "res://Source/Menus/MainMenu/main_menu.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd", "res://Source/Singletons/signals.gd"]
-selected_script="res://Source/MainPortal/debug_script.gd"
+selected_script="res://Source/MainPortal/main_portal.gd"
 open_help=[]
 script_split_offset=214
 list_split_offset=0
