--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,19 +19,19 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Source/Singletons/signals.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Singletons/", "res://Source/Menus/")
+dock_filesystem_selected_paths=PackedStringArray("res://Source/MainPortal/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Menus/Options/", "res://Source/Menus/MainMenu/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Source/MainPortal/main_portal.tscn")
+open_scenes=PackedStringArray("res://Source/MainPortal/main_portal.tscn", "res://Source/Menus/MainMenu/main_menu.tscn", "res://Source/Menus/Options/option_menu.tscn")
 current_scene="res://Source/MainPortal/main_portal.tscn"
-center_split_offset=-564
+center_split_offset=-442
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
