--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -18,10 +18,10 @@ list=Array[Dictionary]([{
 "path": "res://Source/Menus/MainMenu/main_menu.gd"
 }, {
 "base": &"Control",
-"class": &"MainPortal",
+"class": &"MainPortal2",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Source/MainPortal/main_portal.gd"
+"path": "res://Source/NewPortal/main_portal.gd"
 }, {
 "base": &"Control",
 "class": &"OptionMenu",
