--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Source/MainPortal/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/Menus/Options/", "res://Source/Menus/MainMenu/")
+dock_filesystem_selected_paths=PackedStringArray("res://Source/NewPortal/main_portal.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/NewPortal/", "res://Source/Menus/Options/", "res://Source/Menus/MainMenu/", "res://Source/MainPortal/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,13 +31,13 @@ open_scenes=PackedStringArray("res://Source/MainPortal/main_portal.tscn", "res:/
 current_scene="res://Source/MainPortal/main_portal.tscn"
 center_split_offset=-442
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Source/Singletons/callable_functions.gd", "res://Source/MainPortal/debug_script.gd", "res://Source/Utilities/dice.gd", "res://Source/Menus/MainMenu/main_menu.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd", "res://Source/Singletons/signals.gd"]
-selected_script="res://Source/MainPortal/main_portal.gd"
+open_scripts=["res://Source/Singletons/callable_functions.gd", "res://Source/MainPortal/debug_script.gd", "res://Source/Utilities/dice.gd", "res://Source/Menus/MainMenu/main_menu.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/NewPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd", "res://Source/Singletons/signals.gd"]
+selected_script="res://Source/NewPortal/main_portal.gd"
 open_help=[]
 script_split_offset=214
 list_split_offset=0
