[chore] editor info

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Program Files (x86)/Godot/Godot_4.4_GD/Godot_v4.4-stable_win64.exe"
+executable_path="D:/Godot/4.4.dev.GD/Godot_v4.4-beta1_win64.exe"
 use_advanced_connections=false
 
 [debug_options]
