--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,8 +12,8 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=259
-dock_hsplit_3=-285
+dock_hsplit_2=258
+dock_hsplit_3=-284
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -71,9 +71,10 @@ show_search=true
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 23)
+position=Vector2i(1920, 23)
 
 [GameView]
 
 floating_window_rect=Rect2i(0, 0, 0, 0)
 floating_window_screen=-1
+floating_window_screen_rect=Rect2i(0, 0, 0, 0)
