[refactor] 2026 restart init

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Source/MainPortal/main_portal.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Source/", "res://Source/NewPortal/", "res://Source/Menus/Options/", "res://Source/Menus/MainMenu/", "res://Source/MainPortal/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/pages/", "res://source/pages/menus/", "res://source/pages/components/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -34,19 +34,19 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Source/MainPortal/main_portal.tscn")
-current_scene="res://Source/MainPortal/main_portal.tscn"
+open_scenes=PackedStringArray("res://source/pages/menus/main_menu/main_menu.tscn")
+current_scene="res://source/pages/menus/main_menu/main_menu.tscn"
 center_split_offset=-261
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Source/Singletons/callable_functions.gd", "res://Source/MainPortal/debug_script.gd", "res://Source/Utilities/dice.gd", "res://Source/Menus/MainMenu/main_menu.gd", "res://Source/MainPortal/main_portal.gd", "res://Source/NewPortal/main_portal.gd", "res://Source/Menus/Options/option_menu.gd", "res://Source/Singletons/signals.gd"]
-selected_script="res://Source/MainPortal/main_portal.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
-script_split_offset=1112
+script_split_offset=1762
 list_split_offset=0
 zoom_factor=1.0
 
@@ -71,10 +71,10 @@ show_search=true
 
 screen=0
 mode="maximized"
-position=Vector2i(1920, 23)
+position=Vector2i(0, 383)
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(314, 475, 1932, 1127)
+floating_window_screen=0
 floating_window_screen_rect=Rect2i(0, 0, 0, 0)
