--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,73 +1,113 @@
-list=Array[Dictionary]([{
+list=[{
 "base": &"Node",
 "class": &"DebugScript",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
-"path": "res://Source/MainPortal/debug_script.gd"
+"path": "res://old_source/MainPortal/debug_script.gd"
 }, {
 "base": &"Object",
 "class": &"Dice",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
-"path": "res://Source/Utilities/dice.gd"
+"path": "res://old_source/Utilities/dice.gd"
+}, {
+"base": &"Logger",
+"class": &"GutErrorTracker",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/gut/error_tracker.gd"
 }, {
 "base": &"RefCounted",
 "class": &"GutHookScript",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
 "path": "res://addons/gut/hook_script.gd"
 }, {
 "base": &"RefCounted",
 "class": &"GutInputSender",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
 "path": "res://addons/gut/input_sender.gd"
 }, {
 "base": &"Node",
 "class": &"GutMain",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
 "path": "res://addons/gut/gut.gd"
 }, {
 "base": &"RefCounted",
 "class": &"GutStringUtils",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
 "path": "res://addons/gut/strutils.gd"
 }, {
 "base": &"Node",
 "class": &"GutTest",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
 "path": "res://addons/gut/test.gd"
+}, {
+"base": &"RefCounted",
+"class": &"GutTrackedError",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/gut/gut_tracked_error.gd"
 }, {
 "base": &"Object",
 "class": &"GutUtils",
 "icon": "",
+"is_abstract": false,
+"is_tool": true,
 "language": &"GDScript",
 "path": "res://addons/gut/utils.gd"
 }, {
 "base": &"Control",
 "class": &"MainMenu",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
-"path": "res://Source/Menus/MainMenu/main_menu.gd"
+"path": "res://old_source/Menus/MainMenu/main_menu.gd"
 }, {
 "base": &"Control",
 "class": &"MainPortal",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
-"path": "res://Source/MainPortal/main_portal.gd"
+"path": "res://old_source/MainPortal/main_portal.gd"
 }, {
 "base": &"Control",
 "class": &"MainPortal2",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
-"path": "res://Source/NewPortal/main_portal.gd"
+"path": "res://old_source/NewPortal/main_portal.gd"
 }, {
 "base": &"Control",
 "class": &"OptionMenu",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
-"path": "res://Source/Menus/Options/option_menu.gd"
-}])
+"path": "res://old_source/Menus/Options/option_menu.gd"
+}]
