[test] testing ui components structure

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -110,4 +110,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://old_source/Menus/Options/option_menu.gd"
+}, {
+"base": &"Control",
+"class": &"Page",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://source/pages/components/page/page.gd"
 }]
