--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/pages/", "res://source/pages/menus/", "res://source/pages/components/")
+dock_filesystem_selected_paths=PackedStringArray("res://source/pages/components/footer/footer.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/pages/", "res://source/pages/menus/", "res://source/pages/components/", "res://source/pages/components/page/", "res://source/pages/components/navbar/", "res://source/pages/components/footer/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -34,8 +34,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://source/pages/menus/main_menu/main_menu.tscn")
-current_scene="res://source/pages/menus/main_menu/main_menu.tscn"
+open_scenes=PackedStringArray("res://source/pages/menus/main_menu/main_menu.tscn", "res://source/pages/components/navbar/navbar.tscn", "res://source/pages/components/footer/footer.tscn")
+current_scene="res://source/pages/components/footer/footer.tscn"
 center_split_offset=-261
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -43,8 +43,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://source/pages/components/page/page.gd"]
+selected_script="res://source/pages/components/page/page.gd"
 open_help=[]
 script_split_offset=1762
 list_split_offset=0
