--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -118,4 +118,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://source/pages/components/page/page.gd"
+}, {
+"base": &"RefCounted",
+"class": &"TestData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://source/managers/data_types/test_data.gd"
 }]
