--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,16 +11,16 @@ dock_8_selected_tab_idx=0
 dock_floating={}
 dock_split_2=0
 dock_split_3=0
-dock_hsplit_1=0
-dock_hsplit_2=258
-dock_hsplit_3=-284
+dock_hsplit_1=241
+dock_hsplit_2=234
+dock_hsplit_3=-237
 dock_hsplit_4=0
 dock_filesystem_split=0
-dock_filesystem_display_mode=0
+dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://source/pages/components/footer/footer.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/pages/", "res://source/pages/menus/", "res://source/pages/components/", "res://source/pages/components/page/", "res://source/pages/components/navbar/", "res://source/pages/components/footer/")
+dock_filesystem_selected_paths=PackedStringArray("res://source/pages/test_page/test_page.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/pages/", "res://source/pages/menus/", "res://source/pages/components/", "res://source/managers/", "res://old_source/", "res://old_source/Menus/", "res://data/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -28,25 +28,25 @@ dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
+dock_split_1=0
+dock_1="FileSystem"
 dock_3="Scene,Import"
-dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://source/pages/menus/main_menu/main_menu.tscn", "res://source/pages/components/navbar/navbar.tscn", "res://source/pages/components/footer/footer.tscn")
+open_scenes=PackedStringArray("res://source/pages/menus/main_menu/main_menu.tscn", "res://source/pages/components/navbar/navbar.tscn", "res://source/pages/components/footer/footer.tscn", "res://source/pages/test_page/test_page.tscn")
 current_scene="res://source/pages/components/footer/footer.tscn"
-center_split_offset=-261
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+center_split_offset=-285
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://source/pages/components/page/page.gd"]
-selected_script="res://source/pages/components/page/page.gd"
+open_scripts=["res://source/pages/components/footer/footer.gd", "res://source/pages/components/navbar/navbar.gd", "res://source/pages/components/page/page.gd", "res://source/managers/scene_manager.gd", "res://source/managers/data_types/test_data.gd", "res://source/pages/test_page/test_page.gd"]
+selected_script="res://source/pages/test_page/test_page.gd"
 open_help=[]
-script_split_offset=1762
+script_split_offset=1672
 list_split_offset=0
 zoom_factor=1.0
 
@@ -75,6 +75,6 @@ position=Vector2i(0, 383)
 
 [GameView]
 
-floating_window_rect=Rect2i(314, 475, 1932, 1127)
+floating_window_rect=Rect2i(314, 115, 1292, 767)
 floating_window_screen=0
 floating_window_screen_rect=Rect2i(0, 0, 0, 0)
