--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://source/pages/components/footer/footer.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/pages/", "res://source/pages/menus/", "res://source/pages/components/", "res://source/managers/")
+dock_filesystem_selected_paths=PackedStringArray("res://source/managers/scene_manager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/ui/", "res://source/ui/views/", "res://source/ui/templates/", "res://source/managers/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -35,17 +35,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://source/pages/menus/main_menu/main_menu.tscn", "res://source/pages/components/navbar/navbar.tscn", "res://source/pages/components/footer/footer.tscn", "res://source/pages/test_page/test_page.tscn")
-current_scene="res://source/pages/test_page/test_page.tscn"
+open_scenes=PackedStringArray("res://source/ui/views/main_menu/main_menu.tscn", "res://source/ui/templates/navbar/navbar.tscn", "res://source/ui/templates/footer/footer.tscn", "res://source/ui/views/test_page/test_page.tscn")
+current_scene="res://source/ui/views/main_menu/main_menu.tscn"
 center_split_offset=-285
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://source/pages/components/footer/footer.gd"]
-selected_script="res://source/pages/components/footer/footer.gd"
+open_scripts=["res://source/ui/templates/footer/footer.gd", "res://source/managers/scene_manager.gd"]
+selected_script="res://source/managers/scene_manager.gd"
 open_help=[]
 script_split_offset=1672
 list_split_offset=0
