[ui] main menu formatting

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=241
 dock_hsplit_2=334
-dock_hsplit_3=-237
+dock_hsplit_3=-384
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=1
@@ -35,16 +35,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://source/ui/views/main_menu/main_menu.tscn", "res://source/ui/templates/navbar/navbar.tscn", "res://source/ui/templates/footer/footer.tscn", "res://source/ui/views/test_page/test_page.tscn")
+open_scenes=PackedStringArray("res://source/ui/views/main_menu/main_menu.tscn", "res://source/ui/templates/navbar/navbar.tscn", "res://source/ui/templates/footer/footer.tscn", "res://source/ui/views/test_page/test_page.tscn", "res://source/ui/templates/side_menu/side_menu.tscn")
 current_scene="res://source/ui/views/main_menu/main_menu.tscn"
 center_split_offset=-285
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://source/ui/templates/footer/footer.gd", "res://source/managers/scene_manager.gd"]
+open_scripts=["res://source/ui/templates/navbar/navbar.gd", "res://source/ui/templates/page/page.gd", "res://source/managers/query_manager.gd", "res://source/managers/scene_manager.gd", "res://source/managers/data_types/test_data.gd", "res://source/ui/views/test_page/test_page.gd"]
 selected_script="res://source/managers/scene_manager.gd"
 open_help=[]
 script_split_offset=1672
@@ -76,6 +76,6 @@ position=Vector2i(0, 383)
 
 [GameView]
 
-floating_window_rect=Rect2i(634, 655, 1292, 767)
+floating_window_rect=Rect2i(634, 655, 1099, 505)
 floating_window_screen=0
 floating_window_screen_rect=Rect2i(0, 0, 0, 0)
