--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://source/ui/templates/footer/footer.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/ui/", "res://source/ui/views/", "res://source/ui/templates/", "res://source/managers/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://source/ui/views/main_menu/main_menu.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://source/", "res://source/ui/", "res://source/ui/views/", "res://source/ui/templates/", "res://source/managers/", "res://assets/icons/", "res://addons/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -35,8 +35,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://source/ui/templates/footer/footer.tscn", "res://source/ui/views/test_page/test_page.tscn", "res://source/ui/templates/side_menu/side_menu.tscn", "res://source/ui/templates/navbar/navbar.tscn")
-current_scene="res://source/ui/templates/navbar/navbar.tscn"
+open_scenes=PackedStringArray("res://source/ui/views/main_menu/main_menu.tscn", "res://source/ui/views/options/options.tscn")
+current_scene="res://source/ui/views/options/options.tscn"
 center_split_offset=-285
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -44,8 +44,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://source/ui/templates/footer/footer.gd", "res://source/ui/views/main_menu/main_menu.gd", "res://source/ui/templates/navbar/navbar.gd", "res://source/ui/templates/page/page.gd", "res://source/managers/scene_manager.gd", "res://source/managers/data_types/test_data.gd"]
-selected_script="res://source/ui/templates/footer/footer.gd"
+open_scripts=["res://source/ui/templates/footer/footer.gd", "res://source/managers/game_manager.gd", "res://source/ui/views/main_menu/main_menu.gd", "res://source/ui/templates/navbar/navbar.gd", "res://source/ui/templates/page/page.gd", "res://source/managers/scene_manager.gd", "res://source/managers/data_types/test_data.gd", "res://source/ui/views/options/options.gd"]
+selected_script="res://source/ui/views/main_menu/main_menu.gd"
 open_help=[]
 script_split_offset=1672
 list_split_offset=0
